--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/Damien-Larmine/bot-discord-test#readme",
   "dependencies": {
-    "discord.js": "^11.2.1"
+    "discord.js": "^11.2.1",
+    "ffmpeg": "0.0.4",
+    "node-opus": "^0.2.7",
+    "youtube-audio-stream": "0.0.50"
+  },
+  "devDependencies": {
+    "log4js": "^2.3.12"
   }
 }
